--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http:localhost:5000",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "axios": "^0.19.0",
     "react-redux": "^7.1.0",
